# Tasks

Calorimeter/: TaskCalorimeter.docx
Gamma/: TaskGamma.docx
Rezerford/: TaskRezerford.docx
Task2/: CMakeLists.txt  Task2.cc
Task2/include/: Action.hh  DataWriter.hh  DataWriter2.hh  EventAct.hh  Geometry.hh  Loader.hh  PrimaryPart.hh  RunAct.hh  StepAction.hh
Task2/src/: Action.cc  DataWriter.cc  DataWriter2.cc  EventAct.cc  Geometry.cc  Loader.cc  PrimaryPart.cc  RunAct.cc  StepAction.cc
